# CppTraining

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
apps/: CMakeLists.txt
apps/ExtremeC_Backtrace/: TemplateClass.hpp  main.cpp
apps/ExtremeC_OjectFiles/: README.MD  README.md  ex3_1.out  examples_chapter3_1.c  examples_chapter3_2.c  examples_chapter3_2_funcs.c  examples_chapter3_2_funcs.h
apps/LessonOne/: CMakeLists.txt  ClassOne.cpp  ClassOne.hpp  TemplateClass.hpp  main.cpp
apps/common/: Macros.hpp
test/: CMakeLists.txt  LessonOneTest.cpp  README.md
test/Pluralsight/: STL_Algorithms.cpp  stl_algorithms.cpp  updating_legacy_code.cpp
test/YouTube/: back_to_the_basics.cpp  going_native.cpp
